<resources>
    <string name="app_name">FantaLega</string>

    <!-- Edittext di login e registrazione -->
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="password_confirm_placeholder">Conferma password</string>
    <string name="email_placeholder">Email</string>

    <!-- Testi vari -->
    <string name="login_text">Login</string>
    <string name="register_text">Registrazione</string>
    <string name="back_login_text">Torna al login</string>
    <string name="create_text">Crea un account</string>
    <string name="news_text">News</string>
    <string name="panchina">Panchina</string>
    <string name="player_stats">Statistiche giocatore</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="next_match">Prossima partita</string>
    <string name="insert_formation">Inserisci formazione</string>
    <string name="open_bench">Modifica panchina</string>

    <!-- Placeholder dei pulsanti -->
    <string name="button_login">Accedi</string>
    <string name="button_register">Registrati</string>
    <string name="button_campionati">Campionati</string>
    <string name="button_partita">Prossima partita</string>
    <string name="button_formazione">Inserisci formazione</string>
    <string name="button_rosa">La tua rosa</string>
    <string name="button_salva_formazione">Salva Formazione</string>
    <string name="button_indietro">Indietro</string>
    <string name="button_avanti">Avanti</string>
    <string name="button_formazione_consigliata">Imposta formazione consigliata</string>

    <!-- ContentDescription -->
    <string name="home_photo">Copertina della home</string>
    <string name="player_photo">Foto del giocatore</string>

    <!-- Ruoli per la formazione / rosa / panchina -->
    <string name="portieri">Portieri</string>
    <string name="difensori">Difensori</string>
    <string name="centrocampisti">Centrocampisti</string>
    <string name="attaccanti">Attaccanti</string>
    <string name="portiere">Portiere</string>
    <string name="difensore">Difensore</string>
    <string name="centrocampista">Centrocampista</string>
    <string name="attaccante">Attaccante</string>

    <!-- NavBar -->
    <string name="home">Home</string>
    <string name="classifica">Classifica</string>
    <string name="calendario">Calendario</string>
    <string name="campionato">Campionato</string>
</resources>