<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/panchina"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            style="@style/SectionHeaderTextView"
            android:text="@string/portieri" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/goalkeeper1"
                style="@style/PlayerTextView"
                android:text="@string/portiere" />

            <TextView
                android:id="@+id/goalkeeper2"
                style="@style/PlayerTextView"
                android:text="@string/portiere" />
        </LinearLayout>

        <TextView
            style="@style/SectionHeaderTextView"
            android:text="@string/difensori" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/defender1"
                style="@style/PlayerTextView"
                android:text="@string/difensore" />

            <TextView
                android:id="@+id/defender2"
                style="@style/PlayerTextView"
                android:text="@string/difensore" />

            <TextView
                android:id="@+id/defender3"
                style="@style/PlayerTextView"
                android:text="@string/difensore" />

            <TextView
                android:id="@+id/defender4"
                style="@style/PlayerTextView"
                android:text="@string/difensore" />
        </LinearLayout>

        <TextView
            style="@style/SectionHeaderTextView"
            android:text="@string/centrocampisti" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/midfielder1"
                style="@style/PlayerTextView"
                android:text="@string/centrocampista" />

            <TextView
                android:id="@+id/midfielder2"
                style="@style/PlayerTextView"
                android:text="@string/centrocampista" />

            <TextView
                android:id="@+id/midfielder3"
                style="@style/PlayerTextView"
                android:text="@string/centrocampista" />

            <TextView
                android:id="@+id/midfielder4"
                style="@style/PlayerTextView"
                android:text="@string/centrocampista" />
        </LinearLayout>

        <TextView
            style="@style/SectionHeaderTextView"
            android:text="@string/attaccanti" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/striker1"
                style="@style/PlayerTextView"
                android:text="@string/attaccante" />

            <TextView
                android:id="@+id/striker2"
                style="@style/PlayerTextView"
                android:text="@string/attaccante" />

            <TextView
                android:id="@+id/striker3"
                style="@style/PlayerTextView"
                android:text="@string/attaccante" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
